common-managed/apps/app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: rhscl/httpd-24-rhel7 
        name: httpd
        ports:
        - containerPort: 8080
