common-managed/apps/app1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app1
  name: app1
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: app1
    weight: 100
  wildcardPolicy: None
